--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  rename: ^2.0.1
+  flutter_launcher_icons: ^0.9.3
+  flutter_native_splash: ^2.2.7
   flutter_test:
     sdk: flutter
 
@@ -47,10 +50,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon.jpeg"
 
-# The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -59,7 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/app_icon.jpeg
+    - assets/splash_screen.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
